[package]
name = "token-agent"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_agent"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.14.0"
anchor-spl = "0.14.0"
solana-program = "1.7.11"
num_enum = "0.5.4"
bytemuck = "1.7.2"
chrono = { version = "0.4.19", features = ["alloc"], default-features = false }
