[package]
name = "token-agent"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_agent"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
solana-program = "1.7.11"
num_enum = "0.5.4"
bytemuck = "1.7.2"
arrayref = "0.3.6"
chrono = { version = "0.4.19", features = ["alloc"], default-features = false }
net-authority = { version = "0.1.0", path = "/Users/mfrager/Build/solana/net-authority/programs/net-authority", features = ["cpi"] }
swap-contract = { version = "0.1.0", path = "/Users/mfrager/Build/solana/swap-contract/programs/swap-contract", features = ["cpi"] }
